{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 70,
  "lineage": "56127106-4f2b-e026-fc5e-f2a52fe2b57a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e472ba40eb589f49",
            "arn": "arn:aws:ec2:us-east-1:592501618286:instance/i-04f8f8d7c2e446513",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04f8f8d7c2e446513",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "laptop",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-093b996187d044a86",
            "private_dns": "ip-10-0-3-13.ec2.internal",
            "private_ip": "10.0.3.13",
            "public_dns": "ec2-54-147-53-86.compute-1.amazonaws.com",
            "public_ip": "54.147.53.86",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0484f5173ba84ed3e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0e170f034eff3df60"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cb56ade6610ad8ac",
            "tags": {
              "Name": "ExampleAppServerInstance"
            },
            "tags_all": {
              "Name": "ExampleAppServerInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e170f034eff3df60"
            ]
          },
          "dependencies": [
            "aws_security_group.allow-ssh-sg",
            "aws_subnet.public_subnet_name",
            "aws_vpc.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_igw_name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:592501618286:internet-gateway/igw-003e25a1a6ebfe7c3",
            "id": "igw-003e25a1a6ebfe7c3",
            "owner_id": "592501618286",
            "tags": {
              "Name": "transit_vpc_internet_gateway"
            },
            "tags_all": {
              "Name": "transit_vpc_internet_gateway"
            },
            "vpc_id": "vpc-00bc19b655eed3215"
          },
          "dependencies": [
            "aws_vpc.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_vpc_us_east_1a_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:592501618286:route-table/rtb-0a988a5735f320647",
            "id": "rtb-0a988a5735f320647",
            "owner_id": "592501618286",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-003e25a1a6ebfe7c3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00bc19b655eed3215"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vpc_igw_name",
            "aws_vpc.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_vpc_us_east_1a_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002ff0b995a8eb19c",
            "route_table_id": "rtb-0a988a5735f320647",
            "subnet_id": "subnet-0cb56ade6610ad8ac"
          },
          "dependencies": [
            "aws_internet_gateway.vpc_igw_name",
            "aws_route_table.my_vpc_us_east_1a_public",
            "aws_subnet.public_subnet_name",
            "aws_vpc.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:592501618286:security-group/sg-0e170f034eff3df60",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e170f034eff3df60",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh-sg",
            "name_prefix": "",
            "owner_id": "592501618286",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_sg"
            },
            "tags_all": {
              "Name": "allow_ssh_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00bc19b655eed3215"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:592501618286:subnet/subnet-0cb56ade6610ad8ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb56ade6610ad8ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "592501618286",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "transit_vpc_public_subnet"
            },
            "tags_all": {
              "Name": "transit_vpc_public_subnet"
            },
            "vpc_id": "vpc-00bc19b655eed3215"
          },
          "dependencies": [
            "aws_vpc.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:592501618286:vpc/vpc-00bc19b655eed3215",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.3.0/28",
            "default_network_acl_id": "acl-0bec5610ca24ad3b5",
            "default_route_table_id": "rtb-06c495a5b6c5e9f97",
            "default_security_group_id": "sg-01b97e32c9d8da2bb",
            "dhcp_options_id": "dopt-20b3cd47",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00bc19b655eed3215",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06c495a5b6c5e9f97",
            "owner_id": "592501618286",
            "tags": {
              "Name": "transit-vpc"
            },
            "tags_all": {
              "Name": "transit-vpc"
            }
          }
        }
      ]
    }
  ]
}